# IndexedFile

./: .gitignore  Cargo.toml  README.md
benches/: bench1.rs
examples/: index_file.rs  simple.rs
src/: any.rs  bufreader.rs  error.rs  file.rs  index.rs  lib.rs  mem_file.rs  shared_file.rs  string.rs
testfiles/: LICENSE  input1  pre_indexed  simple
