[package]
name = "indexed_file"
version = "0.1.0"
authors = ["jojii <jojii@gmx.net>"]
edition = "2018"
license = "GPLv3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version="1.9.0", features = ["attributes"]}
async-trait = "0.1.50"
itertools = "0.10.1"
