[package]
name = "indexed_file"
version = "0.1.0"
description = "A library to index and read large files by its lines efficiently"
authors = ["jojii <jojii@gmx.net>"]
edition = "2018"
license = "AGPL-3.0"
repository = "https://github.com/JojiiOfficial/IndexedFile"

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "index_file"
path = "examples/index_file.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.1"

[dev-dependencies]
criterion = { version = "0.3.4" }
rand = "0.8.4"

[[bench]]
name = "bench1"
harness = false
