[package]
name = "indexed_file"
version = "0.1.3"
description = "A library to index and read (large) files efficiently"
authors = ["jojii <jojii@gmx.net>"]
edition = "2018"
license = "AGPL-3.0"
repository = "https://github.com/JojiiOfficial/IndexedFile"

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "index_file"
path = "examples/index_file.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3.5"
rand = "0.8.5"

[[bench]]
name = "bench1"
harness = false
